# node-raylib-claude

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  example.js  examples.test.js  index.js  package-lock.json  package.json
debugging_tests/: audio_binding_note.js  audio_debug.js  audio_forced_gc_test.js  audio_gc_test.js  audio_global_forced_gc_test.js  audio_global_test.js  audio_minimal_test.js  audio_quick_test.js  audio_safe_loading.js
examples/: README.md  audio_music_stream.js  audio_sound_loading.js  audio_sound_multi.js  core_2d_camera.js  core_2d_camera_mouse_zoom.js  core_2d_camera_platformer.js  core_2d_camera_split_screen.js  core_3d_camera_first_person.js  core_3d_camera_free.js  core_automation_events.js  core_basic_window.js  core_drop_files.js  core_input_gamepad.js  core_input_keys.js  core_input_mouse.js  core_random_values.js  core_window_should_close.js  models_animation.js  models_first_person_maze.js  models_geometric_shapes.js  shaders_custom_uniform.js  shaders_model_shader.js  shapes_basic_shapes.js  shapes_bouncing_ball.js  shapes_collision_area.js  shapes_colors_palette.js  shapes_following_eyes.js  shapes_lines_bezier.js  shapes_logo_raylib.js  shapes_rectangle_scaling.js  text_font_sdf.js  text_format_text.js  text_input_box.js  text_raylib_fonts.js  textures_background_scrolling.js  textures_blend_modes.js  textures_bunnymark.js  textures_draw_tiled.js  textures_image_loading.js  (+5 more)
src/: node-raylib.c
tools/: api.js  gen_c.js  gen_js.js
